--- a/src/app/pages/clients/list-clients/list-clients.component.html
+++ b/src/app/pages/clients/list-clients/list-clients.component.html
@@ -19,16 +19,28 @@
     <ng-template pTemplate="header">
       <tr>
           <th>Nome</th>
+          <th>E-mail</th>
+          <th>Celular</th>
           <th>Cadastrado em</th>
           <th>Projetos</th>
+          <th style="width: 15%;">Opções</th>
       </tr>
     </ng-template>
 
     <ng-template pTemplate="body" let-client>
       <tr>
           <td>{{client.name}}</td>
+          <td>{{ client.mail }}</td>
+          <td>{{ client.cellphone }}</td>
           <td>{{client.registeredDate | date: 'dd/MM/yyyy'}}</td>
           <td>{{client.projects.length}}</td>
+          <td>
+            <!-- <button pButton pRipple type="button" icon="pi pi-user-plus" class="p-button-rounded p-button-help p-button-text"></button> -->
+            <button pButton pRipple type="button" icon="pi pi-user-edit" class="p-button-rounded p-button-info p-button-text"></button>
+            <button pButton pRipple type="button" icon="pi pi-user-minus" class="p-button-rounded p-button-danger p-button-text"></button>
+            <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded p-button-warning p-button-text"></button>
+            <button pButton pRipple type="button" icon="pi pi-trash" class="p-button-rounded p-button-danger p-button-text"></button>
+          </td>
       </tr>
     </ng-template>
   </p-table>
